<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add">Scan</string>
    <string name="add_contact">Tambah Contact</string>
    <string name="agree">Setuju, Lanjut</string>
    <string name="app_name">SeIP</string>
    <string name="begin">Mulai</string>
    <string name="cancel">Batal</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="confrimation_msg">Are you sure?</string>
    <string name="contacts">Kontak</string>
    <string name="contacts_explain">In Masq you must first sync a shared key with a contact before you can communicate with them.\n</string>
    <string name="datapesan">Pesan Masuk</string>
    <string name="delete">Delete Forever</string>
    <string name="disclaimer">\nDisclaimer:\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="edit">Edit</string>
    <string name="edit_explain">Edit this message locally. It will be saved unencrypted.</string>
    <string name="enc_off">Keystore Encryption: Off</string>
    <string name="enc_on">KeystoreEncryption: On</string>
    <string name="error_send">An error occurred while sending.</string>
    <string name="error_commit">An error occurred while saving the keystore.</string>
    <string name="exit">Keluar</string>
    <string name="external_storage">Use External Storage</string>
    <string name="generate">Generate</string>
    <string name="generate_explain">Tap Begin.\n\nThen tap and swipe wildly around the screen. As you create random data the progress bar will fill.\n\nOnce complete your contact should use Add to scan the QR code generated. Once complete both phones will be in sync.</string>
    <string name="help">Petunjuk</string>
    <string name="help_contacts_step1">1. Meet in person</string>
    <string name="help_contacts_step2">2. Both go to Keys and Settings -> Add Contact</string>
    <string name="help_contacts_step3">3. First person generates a QR code under the new contact.</string>
    <string name="help_contacts_step4">4. The second person scans the QR code.</string>
    <string name="how_to">How To</string>
    <string name="input">Manual Input</string>
    <string name="input_desc">Input must be of the same format the generator produces. (32bytes long and Base64 encoded)</string>
    <string name="install_title">Install Barcode Scanner?</string>
    <string name="install_desc">This action requires Barcode Scanner. Would you like to install it?</string>
    <string name="invalid_key">Key is of invalid format or length</string>
    <string name="key_manage">Data Kontak</string>
    <string name="keystore_options">Keystore Options</string>
    <string name="keystore_password">Keystore Password</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="masq_logo">Masq Logo</string>
    <string name="me">Me</string>
    <string name="move_error">Move aborted due to error</string>
    <string name="move_to_external">Move to External Storage</string>
    <string name="move_to_internal">Move to Internal Storage</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="other">Other</string>
    <string name="password_input">Set Password</string>
    <string name="password_input_msg">Please set the new Keystore password</string>
    <string name="perma">Permanent Key</string>
    <string name="reset_keystore">Delete Keystore Forever</string>
    <string name="save">Save</string>
    <string name="send_hint">Secret message here&#8230;</string>
    <string name="send">Send</string>
    <string name="setup_explain">Tambahkan password untuk menjalankan aplikasi ini</string>
    <string name="sms">Buat Pesan</string>
    <string name="spacer"> </string>
    <string name="to_contact_management">To Keys and Settings</string>
    <string name="to_main_menu">To Main Menu</string>
    <string name="unknown_error">An error occurred.</string>
    <string name="view">View QR</string>
    <string name="yes">Yes</string>
    <string name="copy">Copy Text</string>
    <string name="select_input">Select Input Method</string>
    
    <string name="forgot">I Forgot</string>
    <string name="forgot_msg">This will perminently delete the Keystore. Are you sure?</string>
    
    <string-array name="questions">
        <item>What is Masq?</item>
        <item>What is encryption?</item>
        <item>Is Masq legal?</item>
        <item>How does Masq handle keys?</item>
        <item>What kind of encryption does Masq use?</item>
        <item>What is AES?</item>
        <item>Do Masq messages have a signature?</item>
        <item>Can I change a key after using it with a contact?</item>
        <item>Can I change my keystore password?</item>
        <item>Is it possible to recover a Keystore password?</item>
        <item>Do my contacts need to use Masq as well?</item>
        <item>How do I use Masq?</item>
    </string-array>
    
    <string-array name="answers">
        <item>Masq is sms encryption software. It can be used to send/receive sms messages that can only be opened with the associated key.</item>
        <item>According to wikipedia: Encryption is the process of transforming information using an algorithm to make it unreadable to anyone except those possessing special knowledge, usually referred to as a key.</item>
        <item>Masq is legal in the United States of America. In some other countries it is legal, but you must supply the key if prompted by law enforcement. In other countries it is flat out illegal. It is your responsibility to know the laws in your own country.</item>
        <item>Keys are placed into a file called the Keystore. This file is then encrypted with a keystore password. It is important to keep your keystore password secure because it is the main key. All of the other keys can be obtained with the main key.</item>
        <item>Masq uses AES-256 encryption.</item>
        <item>The Advanced Encryption Standard (AES) specifies a FIPS-approved cryptographic algorithm (Rijndael, designed by Joan Daemen and Vincent Rijmen, published in 1998) that may be used by US federal departments and agencies to cryptographically protect sensitive information [3]. </item>
        <item>Yes. All encrypted Masq messages begin with an underscore ( _ ). For messages longer than 160 characters the messages are ended with a hypen ( - ).\n\nWhat if i send messages that falsely match the Masq signature?\nMasq will attempt to decrypt these messages and will result in "gibberish".</item>
        <item>Yes! This is encouraged for security\'s sake. However, Messages sent/received with an old key will no longer be readable. Instead they will be displayed as "gibberish".</item>
        <item>Yes. Disable and re-enable encryption in the "Keys and Settings".</item>
        <item>No. The keystore password is impossible to recover if lost.</item>
        <item>Yes.</item>
        <item>Add contacts in the "Keys and Settings" menu. Generate or scan keys for these contacts (This will likely be done in person). Once complete they will show up in "Encrypted SMS Messaging". All messages sent/received will be automatically encrypted/decrypted. </item>
    </string-array>
        <string name="pesan">Pesan</string>
        <string name="sent">Pesan Keluar</string>
        <string name="seip_desc">seIP - SMS Enkripsi Intan Pariwara</string>
    
</resources>